{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 292,
  "lineage": "e82105b7-484f-5266-3039-916973c4434d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "app-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a7fcc7b0ef87e769",
            "association_id": "eipassoc-0eb9c00a1ae51fac8",
            "domain": "vpc",
            "id": "eipalloc-0a7fcc7b0ef87e769",
            "network_border_group": "us-west-1",
            "network_interface": "eni-0ebfd2411808bd069",
            "private_dns": "ip-10-0-1-26.us-west-1.compute.internal",
            "private_ip": "10.0.1.26",
            "public_dns": "ec2-52-8-205-172.us-west-1.compute.amazonaws.com",
            "public_ip": "52.8.205.172",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.nextcloud-gw",
            "aws_network_interface.app-nic",
            "aws_security_group.allow_web",
            "aws_subnet.app-internet-subnet",
            "aws_vpc.nextcloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "natgw-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00eb1d8ceee4eeef0",
            "domain": "vpc",
            "id": "eipalloc-00eb1d8ceee4eeef0",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-54-193-211-77.us-west-1.compute.amazonaws.com",
            "public_ip": "54.193.211.77",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053ac55bdcfe96e85",
            "arn": "arn:aws:ec2:us-west-1:404795636328:instance/i-0ca3ef9d75312cd49",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ca3ef9d75312cd49",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0ebfd2411808bd069"
              },
              {
                "delete_on_termination": false,
                "device_index": 1,
                "network_interface_id": "eni-02c70ced2a827c65f"
              }
            ],
            "primary_network_interface_id": "eni-0ebfd2411808bd069",
            "private_dns": "ip-10-0-1-26.us-west-1.compute.internal",
            "private_ip": "10.0.1.26",
            "public_ip": "52.8.205.172",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06ddec7505f0cfe2e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-045bfc57276cfadff",
            "tags": {
              "Name": "app"
            },
            "tags_all": {
              "Name": "app"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-051359309968bb7d8"
            ]
          },
          "dependencies": [
            "aws_eip.app-eip",
            "aws_iam_access_key.nextcloud-ak",
            "aws_iam_user.nextcloud-iam",
            "aws_internet_gateway.nextcloud-gw",
            "aws_network_interface.app-nic",
            "aws_network_interface.app2database-nic",
            "aws_network_interface.database2app-nic",
            "aws_s3_bucket.nextcloud-s3",
            "aws_security_group.allow_all",
            "aws_security_group.allow_database",
            "aws_security_group.allow_web",
            "aws_subnet.app-database-subnet",
            "aws_subnet.app-internet-subnet",
            "aws_vpc.nextcloud",
            "data.cloudinit_config.app-script"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053ac55bdcfe96e85",
            "arn": "arn:aws:ec2:us-west-1:404795636328:instance/i-016714e4ff27becc0",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-016714e4ff27becc0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0c41c6c14e9fcd215"
              },
              {
                "delete_on_termination": false,
                "device_index": 1,
                "network_interface_id": "eni-08e3dddfaed40763d"
              }
            ],
            "primary_network_interface_id": "eni-0c41c6c14e9fcd215",
            "private_dns": "ip-10-0-2-99.us-west-1.compute.internal",
            "private_ip": "10.0.2.99",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06b5cf9b9dd7a3e00",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a1a46a72025d90a6",
            "tags": {
              "Name": "database"
            },
            "tags_all": {
              "Name": "database"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-008f830aac34c5da4"
            ]
          },
          "dependencies": [
            "aws_network_interface.database-nic",
            "aws_network_interface.database2app-nic",
            "aws_security_group.allow_database",
            "aws_subnet.app-database-subnet",
            "aws_subnet.database-internet-subnet",
            "aws_vpc.nextcloud",
            "data.cloudinit_config.database-script"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "nextcloud-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:404795636328:internet-gateway/igw-0858c526531252eb3",
            "id": "igw-0858c526531252eb3",
            "owner_id": "404795636328",
            "tags": {
              "Name": "nextcloud-gw"
            },
            "tags_all": {
              "Name": "nextcloud-gw"
            },
            "vpc_id": "vpc-0ec65a926edac6422"
          },
          "dependencies": [
            "aws_vpc.nextcloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "database-internet-natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00eb1d8ceee4eeef0",
            "connectivity_type": "public",
            "id": "nat-06f0a60562def1fc7",
            "network_interface_id": "eni-0a06effd0dc606ce7",
            "private_ip": "10.0.1.170",
            "public_ip": "54.193.211.77",
            "subnet_id": "subnet-045bfc57276cfadff",
            "tags": {
              "Name": "database-internet-natgw"
            },
            "tags_all": {
              "Name": "database-internet-natgw"
            }
          },
          "dependencies": [
            "aws_eip.natgw-eip",
            "aws_internet_gateway.nextcloud-gw",
            "aws_subnet.app-internet-subnet",
            "aws_vpc.nextcloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "app-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:404795636328:network-interface/eni-0ebfd2411808bd069",
            "id": "eni-0ebfd2411808bd069",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_prefix_count": 0,
            "mac_address": "06:89:9f:6c:de:df",
            "owner_id": "404795636328",
            "private_ip": "10.0.1.26",
            "private_ips": [
              "10.0.1.26"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-051359309968bb7d8"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-045bfc57276cfadff"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.app-internet-subnet",
            "aws_vpc.nextcloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "app2database-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:404795636328:network-interface/eni-02c70ced2a827c65f",
            "id": "eni-02c70ced2a827c65f",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_prefix_count": 0,
            "mac_address": "06:b9:b1:80:6c:73",
            "owner_id": "404795636328",
            "private_ip": "10.0.3.139",
            "private_ips": [
              "10.0.3.139"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-093bb0b84dd8d9762"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-066f0fcee683d0631"
          },
          "dependencies": [
            "aws_security_group.allow_all",
            "aws_subnet.app-database-subnet",
            "aws_vpc.nextcloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "database-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:404795636328:network-interface/eni-0c41c6c14e9fcd215",
            "id": "eni-0c41c6c14e9fcd215",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_prefix_count": 0,
            "mac_address": "06:e5:b5:c9:44:2f",
            "owner_id": "404795636328",
            "private_ip": "10.0.2.99",
            "private_ips": [
              "10.0.2.99"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-008f830aac34c5da4"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a1a46a72025d90a6"
          },
          "dependencies": [
            "aws_security_group.allow_database",
            "aws_subnet.app-database-subnet",
            "aws_subnet.database-internet-subnet",
            "aws_vpc.nextcloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "database2app-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:404795636328:network-interface/eni-08e3dddfaed40763d",
            "id": "eni-08e3dddfaed40763d",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_prefix_count": 0,
            "mac_address": "06:81:83:42:33:27",
            "owner_id": "404795636328",
            "private_ip": "10.0.3.235",
            "private_ips": [
              "10.0.3.235"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-008f830aac34c5da4"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-066f0fcee683d0631"
          },
          "dependencies": [
            "aws_security_group.allow_database",
            "aws_subnet.app-database-subnet",
            "aws_vpc.nextcloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app-database-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:404795636328:route-table/rtb-0a42419320771f32b",
            "id": "rtb-0a42419320771f32b",
            "owner_id": "404795636328",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "app-database-rt"
            },
            "tags_all": {
              "Name": "app-database-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec65a926edac6422"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.nextcloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app-internet-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:404795636328:route-table/rtb-036e0cb30fbf288cf",
            "id": "rtb-036e0cb30fbf288cf",
            "owner_id": "404795636328",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0858c526531252eb3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "app-internet-rt"
            },
            "tags_all": {
              "Name": "app-internet-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec65a926edac6422"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.nextcloud-gw",
            "aws_vpc.nextcloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database-internet-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:404795636328:route-table/rtb-01e37bdf0978f0fdf",
            "id": "rtb-01e37bdf0978f0fdf",
            "owner_id": "404795636328",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06f0a60562def1fc7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "app-internet-rt"
            },
            "tags_all": {
              "Name": "app-internet-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec65a926edac6422"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.natgw-eip",
            "aws_internet_gateway.nextcloud-gw",
            "aws_nat_gateway.database-internet-natgw",
            "aws_subnet.app-internet-subnet",
            "aws_vpc.nextcloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app-database-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ca19f52efa31086",
            "route_table_id": "rtb-0a42419320771f32b",
            "subnet_id": "subnet-066f0fcee683d0631"
          },
          "dependencies": [
            "aws_route_table.app-database-rt",
            "aws_subnet.app-database-subnet",
            "aws_vpc.nextcloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app-internet-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0407fbfa9480483",
            "route_table_id": "rtb-036e0cb30fbf288cf",
            "subnet_id": "subnet-045bfc57276cfadff"
          },
          "dependencies": [
            "aws_internet_gateway.nextcloud-gw",
            "aws_route_table.app-internet-rt",
            "aws_subnet.app-internet-subnet",
            "aws_vpc.nextcloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database-internet-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aee7efe806fe4514",
            "route_table_id": "rtb-01e37bdf0978f0fdf",
            "subnet_id": "subnet-0a1a46a72025d90a6"
          },
          "dependencies": [
            "aws_eip.natgw-eip",
            "aws_internet_gateway.nextcloud-gw",
            "aws_nat_gateway.database-internet-natgw",
            "aws_route_table.database-internet-rt",
            "aws_subnet.app-internet-subnet",
            "aws_subnet.database-internet-subnet",
            "aws_vpc.nextcloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:404795636328:security-group/sg-093bb0b84dd8d9762",
            "description": "Allow all traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-093bb0b84dd8d9762",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "allow_all_traffic",
            "name_prefix": "",
            "owner_id": "404795636328",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_all"
            },
            "tags_all": {
              "Name": "allow_all"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec65a926edac6422"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.nextcloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:404795636328:security-group/sg-008f830aac34c5da4",
            "description": "Allow Database traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-008f830aac34c5da4",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.3.0/24"
                ],
                "description": "MARIA-DB",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "10.0.3.0/24"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_database_traffic",
            "name_prefix": "",
            "owner_id": "404795636328",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_database"
            },
            "tags_all": {
              "Name": "allow_database"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec65a926edac6422"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.app-database-subnet",
            "aws_vpc.nextcloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:404795636328:security-group/sg-051359309968bb7d8",
            "description": "Allow Web traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-051359309968bb7d8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "404795636328",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "tags_all": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec65a926edac6422"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.nextcloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app-database-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:404795636328:subnet/subnet-066f0fcee683d0631",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-066f0fcee683d0631",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "404795636328",
            "tags": {
              "Name": "app-database-subnet"
            },
            "tags_all": {
              "Name": "app-database-subnet"
            },
            "vpc_id": "vpc-0ec65a926edac6422"
          },
          "dependencies": [
            "aws_vpc.nextcloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app-internet-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:404795636328:subnet/subnet-045bfc57276cfadff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-045bfc57276cfadff",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "404795636328",
            "tags": {
              "Name": "app-internet-subnet"
            },
            "tags_all": {
              "Name": "app-internet-subnet"
            },
            "vpc_id": "vpc-0ec65a926edac6422"
          },
          "dependencies": [
            "aws_vpc.nextcloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database-internet-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:404795636328:subnet/subnet-0a1a46a72025d90a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0a1a46a72025d90a6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "404795636328",
            "tags": {
              "Name": "database-internet-subnet"
            },
            "tags_all": {
              "Name": "database-internet-subnet"
            },
            "vpc_id": "vpc-0ec65a926edac6422"
          },
          "dependencies": [
            "aws_vpc.nextcloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "nextcloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:404795636328:vpc/vpc-0ec65a926edac6422",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0eaa98540eea76939",
            "default_route_table_id": "rtb-0863514f81ba71f4c",
            "default_security_group_id": "sg-070304f4e5114cea9",
            "dhcp_options_id": "dopt-0019f80b8ffd5fb98",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ec65a926edac6422",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0863514f81ba71f4c",
            "owner_id": "404795636328",
            "tags": {
              "Name": "nextcloud"
            },
            "tags_all": {
              "Name": "nextcloud"
            }
          }
        }
      ]
    }
  ]
}